--- a/mastodon/tmpl/mastodon-redis.conf.tmpl
+++ b/mastodon/tmpl/mastodon-redis.conf.tmpl
@@ -18,7 +18,7 @@ stop-writes-on-bgsave-error yes
 rdbcompression yes
 rdbchecksum yes
 dbfilename dump.rdb
-dir /var/lib/mastodon/${appconfig.appconfigid}/redis/
+dir /ubos/lib/mastodon/${appconfig.appconfigid}/redis/
 
 # requirepass foobared
 
