--- a/mastodon/tmpl/htaccess.tmpl
+++ b/mastodon/tmpl/htaccess.tmpl
@@ -1,3 +1,12 @@
+# Always
+ProxyPass /robots.txt !
+ProxyPass /favicon.ico !
+ProxyPass /sitemap.xml !
+ProxyPass /.well-known !
+ProxyPass /_common !
+ProxyPass /_errors !
+
+# specific to Mastodon
 ProxyPass /500.html !
 ProxyPass /android-chrome-192x192.png !
 ProxyPass /apple-touch-icon.png !
