--- a/mastodon/tmpl/mastodon-streaming.env.tmpl
+++ b/mastodon/tmpl/mastodon-streaming.env.tmpl
@@ -1,4 +1,5 @@
 NODE_ENV=production
 PORT=${appconfig.tcpport.mastodon-streaming}
-APPCONFIGID=${appconfig.appconfigid}
+STREAMING_CLUSTER_NUM=1
 REDIS_PORT=${appconfig.tcpport.redis}
+APPCONFIGID=${appconfig.appconfigid}
