--- a/mastodon/tmpl/mastodon-web.env.tmpl
+++ b/mastodon/tmpl/mastodon-web.env.tmpl
@@ -1,4 +1,5 @@
-PORT=${appconfig.tcpport.mastodon-web}
 RAILS_ENV=production
+PORT=${appconfig.tcpport.mastodon-web}
+LD_PRELOAD=libjemalloc.so
 SECRET_KEY_BASE=${installable.customizationpoints.secret_key_base.value}
 APPCONFIGID=${appconfig.appconfigid}
