Provide extra headers when merging webfinger info Update .htaccess

--- a/mastodon/tmpl/htaccess.tmpl
+++ b/mastodon/tmpl/htaccess.tmpl
@@ -8,25 +8,21 @@ ProxyPass /_errors !
 
 # specific to Mastodon
 ProxyPass /500.html !
-ProxyPass /android-chrome-192x192.png !
-ProxyPass /apple-touch-icon.png !
 ProxyPass /assets !
 ProxyPass /avatars !
 ProxyPass /badge.png !
-ProxyPass /browserconfig.xml !
 ProxyPass /embed.js !
 ProxyPass /emoji !
-ProxyPass /favicon-dev.ico !
 ProxyPass /favicon.ico !
 ProxyPass /headers !
-ProxyPass /mask-icon.svg !
-ProxyPass /mstile-150x150.png !
+ProxyPass /ocr !
 ProxyPass /oops.gif !
+ProxyPass /oops.png !
 ProxyPass /packs !
 ProxyPass /robots.txt !
 ProxyPass /sounds !
 ProxyPass /sw.js !
-ProxyPass /system !
+ProxyPass /sw.js.map !
 ProxyPass /web-push-icon_expand.png !
 ProxyPass /web-push-icon_favourite.png !
 ProxyPass /web-push-icon_reblog.png !
