Track upstream Fix media

--- a/mastodon/tmpl/htaccess.tmpl
+++ b/mastodon/tmpl/htaccess.tmpl
@@ -23,6 +23,7 @@ ProxyPass /robots.txt !
 ProxyPass /sounds !
 ProxyPass /sw.js !
 ProxyPass /sw.js.map !
+ProxyPass /system !
 ProxyPass /web-push-icon_expand.png !
 ProxyPass /web-push-icon_favourite.png !
 ProxyPass /web-push-icon_reblog.png !
